Add x-button-listener to left hand Oculus Touch controller

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <title>Document</title>
-
+    <script defer src="script.js"></script>
 </head>
 
 <body>
     <a-scene>
-        <a-entity oculus-touch-controls="hand: left"></a-entity>
+        <a-entity x-button-listener oculus-touch-controls="hand: left"></a-entity>
         <a-entity oculus-touch-controls="hand: right"></a-entity>
+        <!--       <a-entity hand-controls="left"></a-entity>
+        <a-entity hand-controls="right"></a-entity> -->
         <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
         <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
         <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
