--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <title>Document</title>
+    <title>Babylon.js sample code</title>
+    <!--     <link rel="stylesheet" href="style.css"> -->
+    <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script defer src="script.js"></script>
+    <style>
+        body,
+        #renderCanvas {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
-    <a-scene>
-        <a-entity x-button-listener oculus-touch-controls="hand: left"></a-entity>
-        <a-entity oculus-touch-controls="hand: right"></a-entity>
-        <!--       <a-entity hand-controls="left"></a-entity>
-        <a-entity hand-controls="right"></a-entity> -->
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-        <a-sky color="#ECECEC"></a-sky>
-    </a-scene>
+    <canvas id="renderCanvas"></canvas>
 </body>
 
 </html>
