Update CSS file path and set scene background color

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Babylon.js sample code</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script defer src="script.js"></script>
     <style>
