--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <head>
     <title>Babylon.js sample code</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script defer src="script.js"></script>
     <style>
@@ -10,8 +9,10 @@
         #renderCanvas {
             width: 100%;
             height: 100%;
+            margin: 0;
         }
     </style>
+
 </head>
 
 <body>
