--- a/index.html
+++ b/index.html
@@ -1,24 +1,175 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
     <title>Babylon.js sample code</title>
+
+    <!-- Babylon.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.2/dat.gui.min.js"></script>
+    <script src="https://assets.babylonjs.com/generated/Assets.js"></script>
+    <script src="https://cdn.babylonjs.com/recast.js"></script>
+    <script src="https://cdn.babylonjs.com/ammo.js"></script>
+    <script src="https://cdn.babylonjs.com/havok/HavokPhysics_umd.js"></script>
+    <script src="https://cdn.babylonjs.com/cannon.js"></script>
+    <script src="https://cdn.babylonjs.com/Oimo.js"></script>
+    <script src="https://cdn.babylonjs.com/earcut.min.js"></script>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
+    <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+    <script src="https://cdn.babylonjs.com/proceduralTexturesLibrary/babylonjs.proceduralTextures.min.js"></script>
+    <script src="https://cdn.babylonjs.com/postProcessesLibrary/babylonjs.postProcess.min.js"></script>
+    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.js"></script>
+    <script src="https://cdn.babylonjs.com/serializers/babylonjs.serializers.min.js"></script>
+    <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
+    <script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
 
-
-    <script defer src="script.js"></script>
     <style>
-        body,
-        #renderCanvas {
+        html,
+        body {
+            overflow: hidden;
             width: 100%;
             height: 100%;
             margin: 0;
+            padding: 0;
+        }
+
+        #renderCanvas {
+            width: 100%;
+            height: 100%;
+            touch-action: none;
+        }
+
+        #canvasZone {
+            width: 100%;
+            height: 100%;
         }
     </style>
-
 </head>
 
 <body>
-    <canvas id="renderCanvas"></canvas>
+    <div id="canvasZone"><canvas id="renderCanvas"></canvas></div>
+    <script>
+        var canvas = document.getElementById("renderCanvas");
+
+        var startRenderLoop = function (engine, canvas) {
+            engine.runRenderLoop(function () {
+                if (sceneToRender && sceneToRender.activeCamera) {
+                    sceneToRender.render();
+                }
+            });
+        }
+
+        var engine = null;
+        var scene = null;
+        var sceneToRender = null;
+        var createDefaultEngine = function () { return new BABYLON.Engine(canvas, true, { preserveDrawingBuffer: true, stencil: true, disableWebGL2Support: false }); };
+        var createScene = async function () {
+
+            // This creates a basic Babylon Scene object (non-mesh)
+            var scene = new BABYLON.Scene(engine);
+
+            const alpha = Math.PI / 4;
+            const beta = Math.PI / 3;
+            const radius = 8;
+            const target = new BABYLON.Vector3(0, 0, 0);
+
+            const camera = new BABYLON.ArcRotateCamera(
+                "Camera",
+                alpha,
+                beta,
+                radius,
+                target,
+                scene
+            );
+            camera.attachControl(canvas, true);
+
+            /*      // This creates and positions a free camera (non-mesh)
+                 var camera = new BABYLON.FreeCamera("camera1", new BABYLON.Vector3(0, 5, -10), scene);
+     
+                 // This targets the camera to scene origin
+                 camera.setTarget(BABYLON.Vector3.Zero());
+     
+                 // This attaches the camera to the canvas
+                 camera.attachControl(canvas, true); */
+
+            const light = new BABYLON.HemisphericLight(
+                "light",
+                new BABYLON.Vector3(1, 1, 0)
+            );
+
+            // Default intensity is 1. Let's dim the light a small amount
+            light.intensity = 0.7;
+
+            // Our built-in 'sphere' shape.
+            var sphere = BABYLON.MeshBuilder.CreateSphere("sphere", { diameter: 2, segments: 32 }, scene);
+
+            // Move the sphere upward 1/2 its height
+            sphere.position.y = 1;
+
+            const environment = scene.createDefaultEnvironment();
+
+            // XR
+            const xrHelper = await scene.createDefaultXRExperienceAsync({
+                floorMeshes: [environment.ground]
+            });
+
+            const box = BABYLON.MeshBuilder.CreateBox("box", {});
+            box.position.x = 0.5;
+            box.position.y = 1;
+
+            const boxMaterial = new BABYLON.StandardMaterial("material", scene);
+            boxMaterial.diffuseColor = BABYLON.Color3.Random();
+            box.material = boxMaterial;
+
+            box.actionManager = new BABYLON.ActionManager(scene);
+            box.actionManager.registerAction(
+                new BABYLON.ExecuteCodeAction(
+                    BABYLON.ActionManager.OnPickTrigger,
+                    function (evt) {
+                        const sourceBox = evt.meshUnderPointer;
+
+                        //move the box upright
+                        sourceBox.position.x += 0.1;
+                        sourceBox.position.y += 0.1;
+
+                        //update the color
+                        boxMaterial.diffuseColor = BABYLON.Color3.Random();
+                    }
+                )
+            );
+
+            return scene;
+
+        };
+        window.initFunction = async function () {
+
+
+
+            var asyncEngineCreation = async function () {
+                try {
+                    return createDefaultEngine();
+                } catch (e) {
+                    console.log("the available createEngine function failed. Creating the default engine instead");
+                    return createDefaultEngine();
+                }
+            }
+
+            window.engine = await asyncEngineCreation();
+            if (!engine) throw 'engine should not be null.';
+            startRenderLoop(engine, canvas);
+            window.scene = createScene();
+        };
+        initFunction().then(() => {
+            scene.then(returnedScene => { sceneToRender = returnedScene; });
+
+        });
+
+        // Resize
+        window.addEventListener("resize", function () {
+            engine.resize();
+        });
+    </script>
 </body>
 
 </html>
